--- a/website main page/style.css
+++ b/website main page/style.css
@@ -6,6 +6,13 @@
 margin: 2px;
 padding: 3px;
 }
+body{
+    font-family: sans-serif;
+    font-size: x-large;
+    color: aqua;
+   
+    font-style: italic;
+}
 
 .nav-menu > ul > li {
     position: relative;
@@ -22,7 +29,7 @@ padding: 3px;
 #main_nav li a {
 
     background-color: rgb(21, 78, 153);
-    
+    text-decoration: none;
 }
 
 
@@ -53,6 +60,8 @@ display: flex;
 background: linear-gradient(to bottom right, #fe0a0a, #0017c5)
 
 }
+
+
 
 #test{
     margin: 200px 0 0 300px;
