--- a/basic html/style.css
+++ b/basic html/style.css
@@ -1,13 +1,14 @@
 
 *{
-    margin: 10px;
+    margin: 0;
     padding: 0;
 }
 
 span {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
     margin: 20px;
-    background-color: transparent blue;
+    background-color:  blue;
+   
     border-radius: 10px;
     color: aqua;
     text-align: center;
@@ -17,30 +18,39 @@ span {
 
 .para {
     text-align: center;
-    background-color:  rgba(76, 0, 255, 0.437);
+    /* background-color:  rgba(76, 0, 255, 0.437); */
     height: 300px;
     width: 500px;
+    line-height: 38px;
+    display: inline;
     /* margin: 5px; */
     padding: 30px;
     box-sizing: border-box;
 
 }
 body{
-    background-image: linear-gradient( to top left , rgb(64, 141, 9),rgb(22, 92, 132));
-
-  height: 100vh;
     
-    
+    /* background-image: linear-gradient(blue,yellow) ;
+    background-image: conic-gradient(red,yellow,blue,aqua) ;
+    /* ( to top left , rgb(217, 232, 206),rgb(9, 19, 25)); */
+/* background-size: 100vh; */
+  height: 100vh; 
+  animation: 10000ms  ease-in-out infinite myanimation;
+  
 
 }
 
 
 .para2 {
+
     background-color: rgba(255, 0, 0, 0.481);
     text-align: center;
-    width: 500px;
-    height: 300px;
-    display: inline;
+     display: inline-block;
+      width: 100%;
+    height: 21px;
+    
+
+   
     
     /* box-sizing: content-box; */
 /* box-sizing: border-box; */
@@ -61,4 +71,54 @@ color: black;
 font-size: 25px;
 }
 
+/* @keyframes myanimation {
+    0% {background-image: linear-gradient(to top left,rgb(7, 114, 45),rgb(19, 181, 137));}
+  25%{background-image: linear-gradient(to top left,rgb(19, 12, 143),rgb(78, 100, 198));}
+  50%{background-image: linear-gradient(to top left,rgb(255, 17, 176),rgb(129, 90, 118));}  
+  75%{background-image: linear-gradient(to top left,rgb(2, 15, 7),rgb(28, 87, 71));}  
+  100% {background-image: linear-gradient(to top left,rgb(7, 27, 114),rgb(60, 181, 19));}
+} */
+
+a.insta{
+  text-decoration: none;
+  margin-left: 10px;
+}
+  
+  /* :root {
+    overflow: hidden;
+    background-color: lightblue;
+    display: flex;
+    justify-content: center;
+  }
+  
+
+  .sun {
+    background-color: yellow;
+    border-radius: 50%;
+    height: 100vh;
+    aspect-ratio: 1 / 1;
    
+    animation:
+      4s linear 0s infinite alternate rise,
+    
+      24s linear 0s infinite psychedelic;
+  } 
+  
+  @keyframes rise {
+    from {
+      transform: translateY(110vh);
+    }
+    to {
+      transform: translateY(0);
+    }
+  }
+  
+  @keyframes psychedelic {
+    from {
+      filter: hue-rotate(0deg);
+    }
+    to {
+      filter: hue-rotate(360deg);
+    }
+  } */
+
