--- a/website main page/style.css
+++ b/website main page/style.css
@@ -1,29 +1,41 @@
-#main_nav {
-    position: absolute;
-    
-}
+
 *{
-margin: 2px;
-padding: 3px;
+margin: 0px;
+padding: 0px;
 }
+
 body{
     font-family: sans-serif;
     font-size: x-large;
-    color: aqua;
+    color: rgb(7, 7, 7);
    
     font-style: italic;
 }
-
-.nav-menu > ul > li {
-    position: relative;
-    white-space: nowrap;
+.menu{
+    background-color: rgba(0, 255, 255, 0.81);
+    height: 60px;
+    width: 100vw;
+    position: fixed;
+    
+}
+.nav-menu li {
+    
+    /* white-space: nowrap; */
+    display: inline-block;
+    padding: 15px;
+    text-align: center;
   }
 .nav-menu{
     list-style: none;
+    margin-left: 100px;
+   
 }
+
+
 #main_nav{
-    margin: 20px;
+    margin: 300px;
     padding: 20px;
+   display: inline;
 }
 
 #main_nav li a {
@@ -40,7 +52,7 @@ body{
     /* text-decoration: none; */
     padding: 8px 15px;
     border-radius: 200px;
-   position: top right;
+   
 }
 
 #main_nav li :active,
@@ -54,18 +66,16 @@ body{
 /* background-repeat: no-repeat; */
 /* background: red url(wallpaper.jpg) no-repeat hight: 10px;; */
 /* background-position: right; */
-height: 100vh;
-display: flex;
 
-background: linear-gradient(to bottom right, #fe0a0a, #0017c5)
 
+background: linear-gradient(to bottom right, #fe0a0a, #0017c5);
+height: 100wh;
 }
 
 #git{
     text-decoration: none;
 }
-
 #test{
-    margin: 200px 0 0 300px;
-    
+    margin-top: 70px;
 }
+
