--- a/website main page/style.css
+++ b/website main page/style.css
@@ -22,6 +22,7 @@ body{
     
     /* white-space: nowrap; */
     display: inline-block;
+  
     padding: 15px;
     text-align: center;
   }
@@ -69,7 +70,7 @@ body{
 
 
 background: linear-gradient(to bottom right, #fe0a0a, #0017c5);
-height: 100wh;
+height: 100vh;
 }
 
 #git{
