--- a/basic html/style3.css
+++ b/basic html/style3.css
@@ -30,6 +30,8 @@ padding: 10px;
 margin: 10px;
 align-items: center;
 
-
-
+/* display: flex; */
+/* align-items: center; */
+/* justify-items: center;
+ */
 }
