--- a/basic html/style3.css
+++ b/basic html/style3.css
@@ -20,13 +20,13 @@ background-color: aqua;
 justify-content: center;
 
 
-
+ 
 }
 .menulist li{
 font-size: 30px;
 background-color: rgba(0, 0, 255, 0.508);
 border-radius: 20px;
-padding: 10px;
+padding: 9px;
 margin: 10px;
 align-items: center;
 
@@ -37,4 +37,11 @@ align-items: center;
 }
 p{
     font-size: 10px;
+    font-variant: small-caps;
+    font-family: serif;
+}
+.menuname{
+display: flex;
+    justify-items: center;
+    align-items: center;
 }
